--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
             - '/dump/:/docker-entrypoint-initdb.d'
         environment:
             - MYSQL_ROOT_PASSWORD=123123
-            - MYSQL_DATABASE=blog
-            - MYSQL_USER=blog
-            - MYSQL_PASSWORD=root
+            - MYSQL_DATABASE=spa
+            - MYSQL_USER=spa
+            - MYSQL_PASSWORD=123123
         ports:
             - '3304:3306'
         container_name: spa_db
