--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,10 @@ services:
         working_dir: /public
         volumes:
             - '.:/public'
-            - '/dump/:/docker-entrypoint-initdb.d'
+            - './dump/:/docker-entrypoint-initdb.d'
         environment:
             - MYSQL_ROOT_PASSWORD=123123
             - MYSQL_DATABASE=spa
-            - MYSQL_USER=root
-            - MYSQL_PASSWORD=123123
         ports:
             - '3306:3306'
         container_name: spa_db
